fix: modal position on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -30,6 +30,8 @@ body {
     justify-content: center;
     align-items: center;
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
